Update: Creating a docker-image for web-application and starting a container, wip